--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tailwindcss/vite": "^4.0.2",
     "antd": "^5.23.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -19,7 +21,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.7.3"
+    "sonner": "^1.7.3",
+    "tailwindcss": "^4.0.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -32,6 +36,6 @@
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.11"
   }
 }
